# autossh

./: .gitignore  LICENSE  Makefile  README.md  autossh.sh  database.json  pyproject.toml
src/autossh/: main.py
